z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,15 @@ body{
 	margin: 0;
 	overflow: hidden;
 }
+
 input, button {
 	outline: none;
+}
+button {
+	padding: 0;
+	border: 0;
+	background: none;
+	cursor: pointer;
 }
 
 input{
@@ -151,7 +158,7 @@ svg{
 	right: -350px;
 	display: none;
 	background: #eeeeee;
-	z-index: 30;
+	z-index: 40;
 }
 
 #nodeData .close i:before{
@@ -263,7 +270,7 @@ svg{
 /* Menu de navigation latéral gauche : Recherche de mot, ajout de mot, filtes */
 #lateral-navigation {
 	width: 70px;
-	z-index: 40;
+	z-index: 30;
 	position: absolute;
 
 	top: 50%;
@@ -534,7 +541,7 @@ svg{
 	right: 20px;
 	border-top: 1px solid #888888;
 	color: #888888;
-	z-index: 999;
+	z-index: 35;
 }
 #menufooter ul {
 	display: flex;
